fix isBlank() not available